syntax = "proto3";

option go_package = "github.com/robmonte/grpc-chat/proto/gen;chatgen";

import "google/protobuf/timestamp.proto";

message ChatMessage {
	User from = 1;
	string message = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message User {
	string id = 1;
	string name = 2;
}

message UserList {
	repeated User users = 1;
}

message JoinResponse {
	int32 error = 1;
	string message = 2;
}

message Empty {}

service ChatService {
	rpc join(User) returns (JoinResponse) {}
	rpc sendMessage(ChatMessage) returns (Empty) {}
	rpc getUsers(Empty) returns (UserList) {}
	rpc openStream(User) returns (stream ChatMessage) {}
	rpc disconnect(User) returns (Empty) {}
}
